--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     --base-fs: 18px;
     --base-mobile-fs: 15px;
     --base-input-fs: 14px;
-    --base-warning-fs: 12px;
+    --base-error-fs: 12px;
 }
+
 
